test/good/arrays/comprehension15.px

[Float] a = [2*x for x in 2..4]
print a
