test/bad/arrays/comprehension14.px

[for x in [2] yield ...x]
